<resources>
    <string name="app_name">Siroh Nabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="peraturan">Peraturan</string>
    <string name="tentang">Tentang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai">Mulai</string>
    <string name="title_siroh_nabs">Siroh Nabs (%1$d/%2$d)</string>
    <string name="materi">Materi</string>
    <string name="kisah_nabi_muhammad">Nabi Muhammad SAW lahir di Kota Mekah pada 12 Rabiul Awwal tahun Gajah bertepatan dengan tahun 570 Masehi. Nabi Muhammad lahir dari orang tua bernama Abdullah bin Abdul Muthalib dan Aminah binti Wahab. Abdullah merupakan seorang saudagar yang sering bepergian ke Negeri Syam. Akan tetapi Abdullah meninggal dunia saat Aminah mengandung Nabi Muhammad yang baru berusia 2 bulan. Setelah itu, Nabi Muhammad pun lahir tanpa didampingi oleh sang ayah. Setelah lahir, Nabi Muhammad diserahkan pada Halimah Sa\'diah untuk disusukan. Zaman dulu masyarakat Arab memiliki kebiasaan menyusukan anak-anak mereka kepada perempuan desa. Hal ini bertujuan agar anak-anaknya tumbuh dilingkungan pedesaan yang udaranya mash bersih. Nabi Muhammad pun tinggal bersama ibu susunya di dusun Bani Sa\'ad selama empat tahun. Kisah Nabi Muhammad selanjutnya di usia 6 tahun sang ibu pun wafat. Kemudian Nabi Muhammad SAW dirawat oleh kakeknya dari pihak ayah yaitu Abdul Mutalib. Selang dua tahun, sang kakek wafat. Sejak saat itu Nabi Muhammad SAW dirawat oleh pamannya bernama Abu Thalib yang merupakan salah satu petinggi dari keluarga Bani Hasyim. Nabi Muhammad SAW pun sering ikut berdagang ke Syam bersama pamannya. Tumbuh dewasa, Nabi Muhammad SAW menikah dengan Siti Khadijah. Siti Khadijah adalah wanita terpandang, cantik dan berasal dari golongan orang berada di Arab. Nabi Muhammad menikah saat berusia 25 tahun. Sedangkan Khadijah saat itu berusia 40 tahun. Nabi Muhammad SAW mendapatkan wahyu saat usia 40 tahun. Setelah mendapat wahyu dari Allah SWT, Nabi Muhammad SAW pun mulai melakukan dakwah. Pada awalnya, dakwah yang disampaikan dengan cara bersembunyi-sembunyi. Nabi Muhammad SAW wafat saat berusia 63 tahun. Beliau mengalami sakit dalam beberapa waktu, suhu tubuhnya tinggi dan sampai akhirnya mengembuskan nafas terakhir.</string>
    <string name="kisah_nabi_adam">Asal mula manusia atau manusia pertama di bumi adalah Nabi Adam, bukannya sebangsa kera sebagaimana teori Darwin. Tetapi, Nabi Adam adalah manusia pertama yang mempunyai gelar Nabi dan Rasul. Dosa yang telah beliau lakukan yaitu memakan buah khuldi karena bisikan setan, telah diampuni Allah karena beliau telah bersungguh-sungguh taubat kepada-Nya. Iblis dan setan terkutuk karena selalu berupaya menggoda manusia agar tersesat dari jalan Allah sehingga nantinya manusia yang berhasil disesatkan akan menjadi teman iblis di neraka Jahannam. Semua makhluk, termasuk malaikat tidak dapat mengetahui barang ghaib kecuali kalua diberitahu oleh Allah SWT, seperti Allah memberikan ilham kepada Qabil melalui burung gagak.</string>
    <string name="kisah_nabi_idris">Nabi Idris adalah kakek Nabi Nuh AS, beliau memiliki bermacam-macam ilmu, diantaranya ilmu hitung, ilmu perbintangan, berani menggempur habis-habisan orang-orang yang durhaka kepada Allah, dan beliau adalah manusia pertama yang mengetahui ilmu jahit-menjahit, karena sebelumnya orang-orang masih memakai pakaian kulit binatang. Beliau diangkat oleh Allah sebagai orang yang mempunyai derajat yang tinggi, karena beliau adalah seseorang yang shalih dan menyabar. Allah tetpa menyayangi orang-orang yang shalih dan bersabar, dan paling benci kepada orang yang mendurhakainya.</string>
    <string name="kisah_nabi_nuh">Nabi Nuh adalah seorang nabi yang menyeru kepada kaumnya, dan mendapat rintangan serta tantangan hebat dari kaumnya yang kafir, berupa ejekan, olok-olok dan kata-kata kotor lainnya. Beliau tidak mengenal putus asa, menasehati dan memberi peringatan kepada kaumnya yang mendurhakai Allah, sedikit sekali jumlah mereka yang beriman mengikuti ajaknnya, padahal perjuangan beliau menelan waktu sekitar 910 tahun lamanya. Apabila umat manusia berbuat hal-hal yang melampaui batas kemanusiaan dan durhaka kepada Allah, maka akan disediakan azab yang sangat pedih di akhiratdan ditimpa siksa yang kejam didunia. Sekalipun keluarga sendiri, apabila berlainan keyakinan, itu bukanlah berarti keluarga nya sendiri Allah SWT pasti memberi pertolongan kepada orang-orang yang beriman kepada-Nya dan mengikuti ajakan nabi-Nya.</string>
    <string name="kisah_nabi_hud">Nabi Hud adalah keturunan nabi nuh uang diutus oleh Allah kepada ‘Aad yang sangat durhaka Kaum ‘Aad adalah suatu kaum yang kuat dan Tangguh, pandai membuat benteng-benteng pertahanan untuk menghadapi musuh, Gedung-gedungnya indah, namun mereka musyrik dan durhaka kepada Allah SWT. Kaum ‘Aad yang sombong dan besar kepala ini, dibinasakan oleh Allah dengan azab berupa angin dahsyat luar biasa selama tujuh malam delapan hari, dan disudahi dengan siksa yang sangat mengerikan, akhirnya mereka mati bergelimpangan seperti pohon-pohon yang ditumbangkan. Pengikut-pengikut dari setiap Nabi terdahulu hingga pengikut Nabi Hud yang benar-benar beriman kepada Allah dan mendengarkan setiap peringatan dan nasehat Nabi mereka, tentu akan diselamatkan Allah dari azab-Nya yang hebat dan dahsyat luar biasa.</string>
    <string name="kisah_nabi_saleh">Nabi Shaleh adalah putra Ubaid bin Aasif bin Masih bin Ubaid bin Chadzir bin Tsamud, kaum beliau disebut kaum Tsamud, karena disesuaikan dengan nama kakek buyutnya yang bernama Tsamud bin Amir bin Syam bin Nuh. Mukjizat Nabi Shaleh ialah uta betina yang keluar dari dalam batu, kaum beliau tidak mau mempercayai kenabiannya, karena itu, mereka berani menyembelih untanya, yang akhirnya mereka mendapat siksaan dari Allah yaitu berupa gempa bumi yang maha dahsyat, sehingga mereka mati bergelimpangan didalam rumah mereka masing-masing, ditambah lagi dengan petir yang menyambar dengan ganas sekali sehingga mereka hancur berkeping-keping. Setiap orang yang mendurhakai Allah, pasti ditimpa azab dari Allah. Begitu sebaliknya, barang siapa yang beriman dan mengikuti ajakan Nabi-Nya, maka akan diselamatkan Allah dari azab-Nya. Begitulah sunnah Allah (hukum alam) berlaku sepanjang masa sampai pada hari kiamat.</string>
    <string name="nabi_adam">Nabi Adam</string>
    <string name="nabi_idris">Nabi Idris</string>
    <string name="nabi_nuh">Nabi Nuh</string>
    <string name="nabi_hud">Nabi Hud</string>
    <string name="nabi_saleh">Nabi Saleh</string>


</resources>